index.js started

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
+        <script src="db.json"></script>
         <script defer src="src/index.js"></script>
 
         <title>My Weather App</title>
     </head>
     <body>
+        <header>
         <h1>My Weather App</h1>
+        </header>
+        <main>
+            <div class="list">
+                <ul id="city-list">
+                </ul>   
+            </div>
+        </main>
+
     </body>
 </html>
